# NeurCross

./: .dockerignore  .gitignore  Dockerfile  NeurCross_Metadata_Dashboard.ipynb  NeurCross_Training.ipynb  README.md  build-wheel.ps1  docker-compose.yml  pyproject.toml
models/: UNet.py  loss_quad_mesh.py
neurcross/: __init__.py  __main__.py
quad_mesh/: __init__.py  checkpoint_utils.py  convert_crossfield.py  crossfield_to_rosy.py  dataset_splits.py  export_dataset_sample.py  extract_quad_mesh.py  feature_artifacts.py  generate_label.py  inference.py  normalize.py  preflight.py  quad_mesh_args.py  quad_mesh_dataset.py  quality_gates.py  sdf_samples.py  train_quad_mesh.py
tests/: test_checkpoint.py  test_dataset_manifest.py  test_dataset_splits.py  test_feature_artifacts.py  test_generate_label.py  test_mesh_preflight.py  test_quad_mesh_dataset.py  test_quality_gates.py  test_sdf_samples.py  test_training_checkpoint_integration.py  test_utils_rotation.py
utils/: utils.py
