[build-system]
requires = [
    "setuptools>=70.1",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "NeurCross"
version = "0.1.0"
description = "Neural cross field project"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"

dependencies = [
    "numpy",
    "safetensors",
    "scipy",
    "torch",
    "torchinfo",
    "timm",
    "trimesh",
    "torch_kmeans"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "models",
    "models.*",
    "quad_mesh",
    "quad_mesh.*",
    "utils",
    "utils.*",
    "neurcross",
    "neurcross.*"
]
